--- a/public/Products.html
+++ b/public/Products.html
@@ -34,14 +34,14 @@
         <img src = "Images/cake/RasberryDelight.jpeg" alt="picture of vintage cake " width="150",breadth="150">
         <p class ="price">Price:100€</p>
     </div>
-    <div> <h3>Copper All Over  </h3>
+    <div> <h3>Red Velevet  </h3>
         <img src = "Images/cake/RedVelvet.jpeg" alt="picture of ButterFly Cake " width="150",breadth="150">
         <p>Price:80€</p>
         </div>
         <div><h3>Golden Leaf  </h3>
         <img src = "Images/cake/Rhostic_bhomen.jpeg" alt="Vintage Love cake " width="150",breadth="150">
         <p>Price:155€</p></div>
-    <div> <h3>Rasberry Delight</h3>
+    <div> <h3> Mrs BouCake</h3>
         <img src = "Images/cake/Mrs-BouCake.jpeg" alt="choclate brownie cake" width="150",breadth="150">
         <p>Price:115€</p>
     </div>
@@ -78,28 +78,28 @@
 
 
 <section id= "CupCakes">
-    <div> <h3>Triple Salted Caramel </h3>
+    <div> <h3>Beehieve Cupcake </h3>
     <img class= "cupcake-img" src = "Images/cupcake/beehieveCupcake.jpef.jpeg" alt="picture of Triple Salted Caramel Cupcake " width="200",breadth="100">
     <p>Price:5€</p>
     </div>
-    <div><h3>Fudgy Vegan Beet </h3>
+    <div><h3>Choclate CupCake </h3>
     <img src = "Images/cupcake/chocklatecupcake.jpeg" alt="picture of Fudgy Vegan Beet Cupcake " width="200",breadth="100">
     <p>Price:10€</p>
     </div>
-    <div><h3>Bubbly Champagne </h3>
+    <div><h3>Lemon Cupcake </h3>
     <img src = "Images/cupcake/lemon-cupcakes-SQUARE.jpeg" alt="picture of Triple Salted Caramel Cupcake " width="200",breadth="100">
     <p>Price:15€</p>
     </div>
-    <div><h3>Lemon With Lavender Frosting</h3>
+    <div><h3>Mocha CupCake</h3>
     <img src = "Images/cupcake/mochaCupcake.jpeg" alt="picture of Lemon Cupcakes With Lavender Frosting " width="200",breadth="100">
     <p>Price:10€</p></div>
-    <div><h3>vanilla caramel 
+    <div><h3>Pina Colada
     </h3>
     <img src = "Images/cupcake/Pina-Colada-Cupcakes-Square.jpeg" alt="picture of Black Forest Cupcakes
     Cupcake " width="200",breadth="100">
     <p>Price:10€</p></div>
 
-    <div><h3>Black Forest </h3>
+    <div><h3>Red Velevet cupcake </h3>
     <img src = "Images/cupcake/Red-Velvet-Cupcakes-HR-27-square.jpeg" alt="picture of Black Forest Cupcakes Cupcake " width="200",breadth="100">
     <p>Price:18€</p></div>
     <div><h3>Chocolate Covered Strawberry </h3>
